[1408] Capella headless support
Bug: 1408

Change-Id: I0522a442c39dbce16df3a72002636d3a8a00ee26
Signed-off-by: Damien Filliat <damien.filliat@thalesgroup.com>